# face-detection-tflite

./: .gitignore  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
data/: camdb.csv
docs/: example-explained.md  tutorial.md
fdlite/: __init__.py  exif.py  face_detection.py  face_landmark.py  iris_landmark.py  nms.py  render.py  transform.py  types.py
fdlite/data/: camdb.txt
fdlite/examples/: __init__.py  iris_recoloring.py
