# -*- coding: utf-8 -*-
[metadata]
name = face-detection-tflite
version = 0.5.0
author = Patrick Levin
author_email = vertical-pink@protonmail.com
description = A Python port of Google MediaPipe Face Detection modules
long_description = file: README.md
long_description_content_type = text/markdown
keywords = AI, face-detection, tensorflow, tflite, face-landmarks, iris-detection, face-mesh
url = https://github.com/patlevin/face-detection-tflite
project_urls =
    Bug Tracker = https://github.com/patlevin/face-detection-tflite/issues
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7
include_package_data = true
install_requires =
    tensorflow>=2.3
    Pillow>=8.0

[flake8]
exclude =
    .eggs,
    .git,
    __pycache__,
    build,
    dist
